--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux-saga": "^1.1.1",
+    "styled-components": "^4.4.0",
     "typescript": "3.6.4",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1"
